feat: include exclude mcp servers
